<resources>
    <string name="app_name">Digital Clock</string>
    <string name="banner_ad_unit_id_1">ca-app-pub-1322448895447717/9531904783</string>
    <string name="date_constant">Date</string>
    <string name="saturday">Saturday</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="title_timer">Timer</string>
    <string name="numberpicker_text_size">24sp</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_background_title">Background Color</string>


    <string-array name="pref_backgrnd_color_titles">
        <item>Yellow</item>
        <item>Black</item>
        <item>Blue Grey</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Purple</item>
    </string-array>
    <string-array name="pref_backgrnd_color_values">
        <item>#cca300</item>
        <item>#000000</item>
        <item>#607D8B</item>
        <item>#1b62d3</item>
        <item>#bf8040</item>
        <item>#e600e6</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="appwidget_text">Digital Clock</string>
    <string name="pref_background_color">pref_background_color</string>
    <string name="pref_text_color_title">Dark Text</string>
    <string name="pref_text_color">pref_text_color</string>
    <string name="hr_label">HR</string>
    <string name="min_label">Min</string>
    <string name="sec_label">Sec</string>
    <string name="default_timer_value">00:00:00</string>
    <string name="back_label">Back</string>
    <string name="start_label">Start</string>
    <string name="reset_label">Reset</string>
    <string name="timer_time_up">Times Up!</string>
    <string name="lap_label">Lap</string>
    <string name="interestial_ad_unit">ca-app-pub-1322448895447717/9973408784</string>
    <string name="add_widget">Add widget</string>
</resources>
