<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_resource"
    android:id="@+id/mainStopwatchtLayout"
    tools:context="com.mkhan.myapplication.StopClockActivity">

    <TextView
        android:id="@+id/txtStopWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/default_timer_value"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        ads:layout_constraintHorizontal_bias="0.492"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <ListView
        android:id="@+id/listStopwatch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStopWatchPlay"
        android:layout_below="@+id/txtStopWatch"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_resource"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="0dp"
        android:scrollbars="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/btnStopWatchClock"
        ads:layout_constraintTop_toBottomOf="@+id/txtStopWatch" />

    <Button
        android:id="@+id/btnStopWatchPlay"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStopWatchClock"
        android:layout_alignEnd="@+id/listStopwatch"
        android:layout_alignStart="@+id/listStopwatch"
        android:fontFamily="serif"
        android:text="@string/start_label"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/btnStopWatchClock"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnStopWatchReset"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="@dimen/margin_to_reset_btn"
        android:fontFamily="serif"
        android:text="@string/back_label"
        android:textSize="24sp"
        ads:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStopWatchReset"
        style="@style/MyButtonStyleRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/reset_label"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        ads:layout_constraintLeft_toRightOf="@+id/btnStopWatchClock" />

    <Button
        android:id="@+id/btnLap"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btnStopWatchReset"
        android:layout_marginLeft="@dimen/margin_to_reset_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/lap_label"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintRight_toRightOf="@id/btnStopWatchPlay" />

</RelativeLayout>
