<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainConstraintLayout"
    android:background="@drawable/border_resource"
    tools:context="com.mkhan.myapplication.StopClockActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_1"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/adView"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        ads:layout_constraintBottom_toTopOf="@+id/tableRow">

        <ProgressBar
            android:id="@+id/progressBarTimer"
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:max="100"
            android:indeterminate="true"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/txtTimerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_timer_value"

            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="50sp" />

    </RelativeLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/tableRow"
        android:layout_marginBottom="8dp"
        ads:layout_constraintBottom_toTopOf="@+id/tableLayout"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/adView"
        ads:layout_constraintVertical_bias="0.7">

        <NumberPicker
            android:id="@+id/numberPickerHour"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/number_picker_height"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/numberPickerMinutes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/number_picker_height"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/numberPickerSeconds"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/number_picker_height"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/AppTheme.Picker" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="@+id/tableRow"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="@+id/tableRow"
        android:id="@+id/tableRow2"
        android:layout_marginTop="0dp"
        ads:layout_constraintTop_toBottomOf="@+id/tableRow"
        android:layout_marginBottom="0dp"
        ads:layout_constraintBottom_toTopOf="@+id/tableLayout"
        ads:layout_constraintVertical_bias="0.01999998">

        <TextView
            android:id="@+id/txtHourLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/hr_label"
            android:textAlignment="center"
            android:textColor="@color/colorBtnText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMinutesLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/min_label"
            android:textAlignment="center"
            android:textColor="@color/colorBtnText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSecondsLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sec_label"
            android:textAlignment="center"
            android:textColor="@color/colorBtnText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:stretchColumns="*"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnBackToMainClock"
                style="@style/MyButtonStyleRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="serif"
                android:text="@string/back_label"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTimerPlay"
                style="@style/MyButtonStyleGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/start_label"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTimerReset"
                style="@style/MyButtonStyleRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/reset_label"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
