<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_resource"
    android:orientation="vertical"
    tools:context="com.mkhan.myapplication.MainActivity"
    android:weightSum="1"
    android:baselineAligned="false"
    android:layout_weight="1">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_1"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="8dp"
        ads:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/textClock"
        style="@style/Animation.AppCompat.DropDownUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="153dp"
        android:fontFamily="serif"
        android:format12Hour="hh:mm"
        android:text="@string/date_constant"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textClock_textSize"
        android:typeface="normal"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="32dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintHorizontal_bias="0.434" />

    <Button
        android:id="@+id/btnStopWatch"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Stopwatch"
        android:textAlignment="textStart"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/textClock" />

    <TextClock
        android:id="@+id/textClockSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:format12Hour="ss"
        android:format24Hour="ss"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textClockSec_textSize"
        android:textStyle="normal"
        ads:layout_constraintLeft_toRightOf="@+id/textClock"
        ads:layout_constraintTop_toTopOf="@+id/textClock" />

    <TextClock
        android:id="@+id/textClockAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:fontFamily="serif"
        android:format12Hour="a"
        android:format24Hour=""
        android:textColor="@android:color/white"
        android:textSize="@dimen/textClockAM_textSize"
        android:textStyle="normal"
        ads:layout_constraintBottom_toBottomOf="@+id/textClock"
        ads:layout_constraintLeft_toRightOf="@+id/textClock"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:fontFamily="serif"
        android:text="@string/saturday"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textClockDay_textSize"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/textClock"
        android:layout_marginRight="8dp"
        ads:layout_constraintHorizontal_bias="0.456"
        android:layout_marginBottom="8dp"
        ads:layout_constraintBottom_toTopOf="@+id/textClock"
        ads:layout_constraintVertical_bias="1.0"
        ads:layout_constraintTop_toBottomOf="@+id/adView1" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/date_constant"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textClockDate_textSize"
        android:typeface="normal"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/textViewDay"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="@+id/textViewDay" />

    <ImageView
        android:id="@+id/batteryImage"
        android:layout_width="@dimen/battery_ImgSize"
        android:layout_height="@dimen/battery_ImgSize"
        android:visibility="visible"
        ads:layout_constraintBottom_toBottomOf="@+id/batteryText"
        ads:layout_constraintRight_toLeftOf="@+id/batteryText"
        ads:layout_constraintTop_toTopOf="@+id/batteryText" />

    <TextView
        android:id="@+id/batteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Battery : 100 %"
        android:textColor="@android:color/white"
        android:textSize="@dimen/batteryText_textSize"
        android:typeface="normal"
        android:layout_marginRight="16dp"
        ads:layout_constraintRight_toRightOf="@+id/textClock"
        android:layout_marginTop="24dp"
        ads:layout_constraintTop_toBottomOf="@+id/adView1"
        android:layout_marginBottom="8dp"
        ads:layout_constraintBottom_toTopOf="@+id/textClock" />

</android.support.constraint.ConstraintLayout>