<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_resource"
    android:orientation="vertical"
    tools:context="com.mkhan.myapplication.MainActivity"
    android:weightSum="1"
    android:id="@+id/mainConstraintLayout"
    android:baselineAligned="false"
    android:layout_weight="1">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="2dp"
        tools:layout_constraintLeft_creator="1"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintHorizontal_bias="0.511"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/adView1"
        ads:layout_constraintVertical_bias="0.217">

        <TextClock
            android:id="@+id/textClock"
            style="@style/myTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:format12Hour="hh:mm"
            android:text="@string/date_constant"
            android:textAlignment="textStart"
            android:textSize="@dimen/textClock_textSize"
            android:textStyle="bold"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintRight_toRightOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            ads:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

    <TextClock
        android:id="@+id/textClockSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        style="@style/myTextStyle"
        android:format12Hour="ss"
        android:format24Hour="ss"
        android:textSize="@dimen/textClockSec_textSize"
        ads:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        ads:layout_constraintRight_toRightOf="@+id/constraintLayout"
        ads:layout_constraintTop_toTopOf="@+id/constraintLayout"
        ads:layout_constraintVertical_bias="0.625" />

    <TextClock
        android:id="@+id/textClockAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        style="@style/myTextStyle"
        android:format12Hour="a"
        android:format24Hour=""
        android:textSize="@dimen/textClockAM_textSize"
        ads:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        ads:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginTop="0dp"
        ads:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/constLayout_Day"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        ads:layout_constraintTop_toBottomOf="@+id/textClockAM"
        android:id="@+id/constraintLayout2"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            style="@style/myTextStyle"
            android:text="@string/saturday"
            android:textAlignment="viewStart"
            android:textSize="@dimen/textClockDay_textSize"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/date_constant"
            android:textAlignment="center"
            style="@style/myTextStyle"
            android:textSize="@dimen/textClockDate_textSize"

            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/textViewDay"
            ads:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp"
            ads:layout_constraintLeft_toLeftOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/batteryImage"
        android:layout_width="@dimen/battery_ImgSize"
        android:layout_height="@dimen/battery_ImgSize"
        android:visibility="visible"
        ads:layout_constraintTop_toTopOf="@+id/batteryText"
        ads:layout_constraintRight_toLeftOf="@+id/batteryText"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        ads:layout_constraintBottom_toBottomOf="@+id/batteryText"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/batteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100 %"
        style="@style/myTextStyle"
        android:textSize="@dimen/batteryText_textSize"

        android:layout_marginRight="16dp"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/btnStopWatch"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/btnStopWatch"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:text="Stopwatch"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        ads:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/btn"
        style="@style/MyButtonStyleGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:text="Stopwatch"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        ads:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        ads:layout_constraintVertical_bias="0.68" />


</android.support.constraint.ConstraintLayout>